<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tansaction"
        android:icon="@drawable/ic_transaction"
        android:title="@string/transaction"
        android:contentDescription="@string/transaction"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/more"
        android:title="@string/more"
        android:contentDescription="@string/content_description_more"
        app:showAsAction="never" />
    <item
        android:id="@+id/tambahBarang"
        android:title="@string/tambah_barang"
        android:contentDescription="@string/tambah_barang"
        app:showAsAction="never" />
</menu>